# data-ingestion

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/notepads/data-ingestion-implementation/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: data-ingestion-implementation.md
app/: audio_storage.py  config.py  embeddings.py  ingestion.py  main.py  schemas.py  semantic_chunking.py  story_labeling.py  transcription.py  vector_store.py
scripts/: smoke_text_ingest.sh
tests/: test_embeddings.py  test_external_smoke.py  test_imports.py  test_ingest_contract.py  test_ingestion_service.py  test_semantic_chunking.py  test_transcription.py  test_vector_store.py
