[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "apple-pie-data-ingestion"
version = "0.1.0"
description = "Minimal Dockerized ingestion service for Apple Pie"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "azure-storage-blob>=12.23.0",
  "openai>=1.40.0",
  "chonkie[azure-openai]>=0.5.0",
  "qdrant-client>=1.11.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
